apps/servarr/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/part-of: servarr-stack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: radarr
  ports:
    - name: http
      port: 7878
      targetPort: http
      protocol: TCP
