apps/servarr/radarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/part-of: servarr-stack
  annotations:
    external-dns.alpha.kubernetes.io/hostname: radarr.lan
    external-dns.alpha.kubernetes.io/target: "192.168.68.62"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.lan`)
      kind: Rule
      middlewares:
        - name: lan-allowlist
          namespace: kube-system
      services:
        - name: radarr
          port: 7878
  tls: {}
